--- a/Arkanoid/Arkanoid.vcxproj
+++ b/Arkanoid/Arkanoid.vcxproj
@@ -158,31 +158,29 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Apple.cpp" />
-    <ClCompile Include="GameField.cpp" />
+    <ClCompile Include="Ball.cpp" />
+    <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameMain.cpp" />
     <ClCompile Include="LeaderBoard.cpp" />
     <ClCompile Include="Menu.cpp" />
-    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Platform.cpp" />
     <ClCompile Include="PopUp.cpp" />
     <ClCompile Include="Resources.cpp" />
     <ClCompile Include="GameStates.cpp" />
     <ClCompile Include="UI.cpp" />
-    <ClCompile Include="Wall.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Apple.h" />
-    <ClInclude Include="GameField.h" />
+    <ClInclude Include="Ball.h" />
+    <ClInclude Include="Engine.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="LeaderBoard.h" />
     <ClInclude Include="Menu.h" />
-    <ClInclude Include="Player.h" />
+    <ClInclude Include="Platform.h" />
     <ClInclude Include="PopUp.h" />
     <ClInclude Include="Resources.h" />
     <ClInclude Include="GameStates.h" />
     <ClInclude Include="UI.h" />
-    <ClInclude Include="Wall.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
