--- a/Arkanoid/Arkanoid.vcxproj.filters
+++ b/Arkanoid/Arkanoid.vcxproj.filters
@@ -40,7 +40,10 @@
     <ClCompile Include="LeaderBoard.cpp">
       <Filter>Sources</Filter>
     </ClCompile>
-    <ClCompile Include="Engine.cpp">
+    <ClCompile Include="GameField.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
+    <ClCompile Include="Math.cpp">
       <Filter>Sources</Filter>
     </ClCompile>
   </ItemGroup>
@@ -72,7 +75,10 @@
     <ClInclude Include="LeaderBoard.h">
       <Filter>Headers</Filter>
     </ClInclude>
-    <ClInclude Include="Engine.h">
+    <ClInclude Include="GameField.h">
+      <Filter>Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="Math.h">
       <Filter>Headers</Filter>
     </ClInclude>
   </ItemGroup>
