--- a/Arkanoid/Arkanoid.vcxproj
+++ b/Arkanoid/Arkanoid.vcxproj
@@ -166,7 +166,7 @@
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="LeaderBoard.cpp" />
     <ClCompile Include="Math.cpp" />
-    <ClCompile Include="Menu.cpp" />
+    <ClCompile Include="MainMenu.cpp" />
     <ClCompile Include="Platform.cpp" />
     <ClCompile Include="PopUp.cpp" />
     <ClCompile Include="Resources.cpp" />
@@ -179,9 +179,10 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameField.h" />
     <ClInclude Include="GameObject.h" />
+    <ClInclude Include="GameStatesData.h" />
     <ClInclude Include="LeaderBoard.h" />
     <ClInclude Include="Math.h" />
-    <ClInclude Include="Menu.h" />
+    <ClInclude Include="MainMenu.h" />
     <ClInclude Include="Platform.h" />
     <ClInclude Include="PopUp.h" />
     <ClInclude Include="Resources.h" />
