--- a/Arkanoid/Arkanoid.vcxproj
+++ b/Arkanoid/Arkanoid.vcxproj
@@ -19,10 +19,12 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Game\AppStates\AppStates.h" />
     <ClInclude Include="Game\FileSystem\FileSystem.h" />
     <ClInclude Include="Game\Game.h" />
     <ClInclude Include="Game\GameStates\IGameState.h" />
     <ClInclude Include="Game\GameStates\MainMenu\MainMenuState.h" />
+    <ClInclude Include="Game\Math\Math.h" />
     <ClInclude Include="Game\Settings\Settings.h" />
   </ItemGroup>
   <ItemGroup>
@@ -30,6 +32,7 @@
     <ClCompile Include="Game\Game.cpp" />
     <ClCompile Include="Game\GameStates\MainMenu\MainMenuState.cpp" />
     <ClCompile Include="Game\Main.cpp" />
+    <ClCompile Include="Game\Math\Math.cpp" />
     <ClCompile Include="Game\Settings\Settings.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
