--- a/Arkanoid/Arkanoid.vcxproj
+++ b/Arkanoid/Arkanoid.vcxproj
@@ -26,6 +26,8 @@
     <ClInclude Include="Game\GameStates\IGameState.h" />
     <ClInclude Include="Game\GameStates\MainGameplay\MainGameplayState.h" />
     <ClInclude Include="Game\GameStates\MainMenu\MainMenuState.h" />
+    <ClInclude Include="Game\GameStates\SettingsMenu\ISubSettingsMenuState.h" />
+    <ClInclude Include="Game\GameStates\SettingsMenu\Resolution.h" />
     <ClInclude Include="Game\GameStates\SettingsMenu\SettingsMenuState.h" />
     <ClInclude Include="Game\GameStates\SettingsMenu\SoundSettingsMenuState.h" />
     <ClInclude Include="Game\GameStates\SettingsMenu\VideoSettingsMenuState.h" />
@@ -37,6 +39,7 @@
     <ClCompile Include="Game\Game.cpp" />
     <ClCompile Include="Game\GameStates\MainGameplay\MainGameplayState.cpp" />
     <ClCompile Include="Game\GameStates\MainMenu\MainMenuState.cpp" />
+    <ClCompile Include="Game\GameStates\SettingsMenu\Resolution.cpp" />
     <ClCompile Include="Game\GameStates\SettingsMenu\SettingsMenuState.cpp" />
     <ClCompile Include="Game\GameStates\SettingsMenu\SoundSettingsMenuState.cpp" />
     <ClCompile Include="Game\GameStates\SettingsMenu\VideoSettingsMenuState.cpp" />
