--- a/Arkanoid/Arkanoid.vcxproj.filters
+++ b/Arkanoid/Arkanoid.vcxproj.filters
@@ -75,6 +75,12 @@
     <ClInclude Include="Game\GameStates\CButton.h">
       <Filter>Game\GameStates</Filter>
     </ClInclude>
+    <ClInclude Include="Game\GameStates\SettingsMenu\ISubSettingsMenuState.h">
+      <Filter>Game\GameStates\SettingsMenu</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\GameStates\SettingsMenu\Resolution.h">
+      <Filter>Game\GameStates\SettingsMenu\VideoSettings</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Game\Main.cpp">
@@ -105,6 +111,9 @@
       <Filter>Game\GameStates\SettingsMenu\SoundSettings</Filter>
     </ClCompile>
     <ClCompile Include="Game\GameStates\SettingsMenu\VideoSettingsMenuState.cpp">
+      <Filter>Game\GameStates\SettingsMenu\VideoSettings</Filter>
+    </ClCompile>
+    <ClCompile Include="Game\GameStates\SettingsMenu\Resolution.cpp">
       <Filter>Game\GameStates\SettingsMenu\VideoSettings</Filter>
     </ClCompile>
   </ItemGroup>
