--- a/Arkanoid/Arkanoid.vcxproj
+++ b/Arkanoid/Arkanoid.vcxproj
@@ -23,7 +23,9 @@
     <ClInclude Include="Game\FileSystem\FileSystem.h" />
     <ClInclude Include="Game\Game.h" />
     <ClInclude Include="Game\GameStates\CButton.h" />
+    <ClInclude Include="Game\GameStates\ExitMenu\ExitMenuState.h" />
     <ClInclude Include="Game\GameStates\IGameState.h" />
+    <ClInclude Include="Game\GameStates\LeaderBoardMenu\LeaderBoardMenuState.h" />
     <ClInclude Include="Game\GameStates\MainGameplay\MainGameplayState.h" />
     <ClInclude Include="Game\GameStates\MainMenu\MainMenuState.h" />
     <ClInclude Include="Game\GameStates\SettingsMenu\ISubSettingsMenuState.h" />
@@ -37,6 +39,8 @@
   <ItemGroup>
     <ClCompile Include="Game\FileSystem\FileSystem.cpp" />
     <ClCompile Include="Game\Game.cpp" />
+    <ClCompile Include="Game\GameStates\ExitMenu\ExitMenuState.cpp" />
+    <ClCompile Include="Game\GameStates\LeaderBoardMenu\LeaderBoardMenuState.cpp" />
     <ClCompile Include="Game\GameStates\MainGameplay\MainGameplayState.cpp" />
     <ClCompile Include="Game\GameStates\MainMenu\MainMenuState.cpp" />
     <ClCompile Include="Game\GameStates\SettingsMenu\ResolutionSettingsMenu.cpp" />
