--- a/Arkanoid/Arkanoid.vcxproj.filters
+++ b/Arkanoid/Arkanoid.vcxproj.filters
@@ -37,6 +37,12 @@
     <Filter Include="Game\GameStates\SettingsMenu\VideoSettings">
       <UniqueIdentifier>{1b6ec277-f32f-4ee2-a6ab-b28f692e9f20}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Game\GameStates\ExitMenu">
+      <UniqueIdentifier>{6e2fe1ab-df27-4941-898d-926813b6d41f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Game\GameStates\LeaderBoardMenu">
+      <UniqueIdentifier>{c358f39a-4abf-4833-9b3d-aa6058c04642}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game\GameStates\IGameState.h">
@@ -81,6 +87,12 @@
     <ClInclude Include="Game\GameStates\SettingsMenu\ResolutionSettingsMenu.h">
       <Filter>Game\GameStates\SettingsMenu\VideoSettings</Filter>
     </ClInclude>
+    <ClInclude Include="Game\GameStates\LeaderBoardMenu\LeaderBoardMenuState.h">
+      <Filter>Game\GameStates\LeaderBoardMenu</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\GameStates\ExitMenu\ExitMenuState.h">
+      <Filter>Game\GameStates\ExitMenu</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Game\Main.cpp">
@@ -115,6 +127,12 @@
     </ClCompile>
     <ClCompile Include="Game\GameStates\SettingsMenu\ResolutionSettingsMenu.cpp">
       <Filter>Game\GameStates\SettingsMenu\VideoSettings</Filter>
+    </ClCompile>
+    <ClCompile Include="Game\GameStates\LeaderBoardMenu\LeaderBoardMenuState.cpp">
+      <Filter>Game\GameStates\LeaderBoardMenu</Filter>
+    </ClCompile>
+    <ClCompile Include="Game\GameStates\ExitMenu\ExitMenuState.cpp">
+      <Filter>Game\GameStates\ExitMenu</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
