Added level loader and interface of game objects

--- a/Arkanoid/Arkanoid.vcxproj
+++ b/Arkanoid/Arkanoid.vcxproj
@@ -27,6 +27,9 @@
     <ClInclude Include="Game\GameStates\IGameState.h" />
     <ClInclude Include="Game\GameStates\LeaderBoardMenu\LeaderBoard.h" />
     <ClInclude Include="Game\GameStates\LeaderBoardMenu\LeaderBoardMenuState.h" />
+    <ClInclude Include="Game\GameStates\MainGameplay\IGameObject.h" />
+    <ClInclude Include="Game\GameStates\MainGameplay\ISubGameplayState.h" />
+    <ClInclude Include="Game\GameStates\MainGameplay\LevelLoader.h" />
     <ClInclude Include="Game\GameStates\MainGameplay\MainGameplayState.h" />
     <ClInclude Include="Game\GameStates\MainMenu\MainMenuState.h" />
     <ClInclude Include="Game\GameStates\SettingsMenu\ISubSettingsMenuState.h" />
@@ -43,6 +46,7 @@
     <ClCompile Include="Game\GameStates\ExitMenu\ExitMenuState.cpp" />
     <ClCompile Include="Game\GameStates\LeaderBoardMenu\LeaderBoard.cpp" />
     <ClCompile Include="Game\GameStates\LeaderBoardMenu\LeaderBoardMenuState.cpp" />
+    <ClCompile Include="Game\GameStates\MainGameplay\LevelLoader.cpp" />
     <ClCompile Include="Game\GameStates\MainGameplay\MainGameplayState.cpp" />
     <ClCompile Include="Game\GameStates\MainMenu\MainMenuState.cpp" />
     <ClCompile Include="Game\GameStates\SettingsMenu\ResolutionSettingsMenu.cpp" />
