--- a/Arkanoid/Arkanoid.vcxproj
+++ b/Arkanoid/Arkanoid.vcxproj
@@ -27,6 +27,10 @@
     <ClInclude Include="Game\GameStates\IGameState.h" />
     <ClInclude Include="Game\GameStates\LeaderBoardMenu\LeaderBoard.h" />
     <ClInclude Include="Game\GameStates\LeaderBoardMenu\LeaderBoardMenuState.h" />
+    <ClInclude Include="Game\GameStates\MainGameplay\GameObjects\Ball.h" />
+    <ClInclude Include="Game\GameStates\MainGameplay\GameObjects\Block.h" />
+    <ClInclude Include="Game\GameStates\MainGameplay\GameObjects\BlockFactory.h" />
+    <ClInclude Include="Game\GameStates\MainGameplay\GameObjects\Platform.h" />
     <ClInclude Include="Game\GameStates\MainGameplay\IGameObject.h" />
     <ClInclude Include="Game\GameStates\MainGameplay\ISubGameplayState.h" />
     <ClInclude Include="Game\GameStates\MainGameplay\LevelLoader.h" />
@@ -39,6 +43,7 @@
     <ClInclude Include="Game\GameStates\SettingsMenu\VideoSettingsMenuState.h" />
     <ClInclude Include="Game\Math\Math.h" />
     <ClInclude Include="Game\Settings\Settings.h" />
+    <ClInclude Include="Game\UI\UI.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Game\FileSystem\FileSystem.cpp" />
@@ -46,6 +51,10 @@
     <ClCompile Include="Game\GameStates\ExitMenu\ExitMenuState.cpp" />
     <ClCompile Include="Game\GameStates\LeaderBoardMenu\LeaderBoard.cpp" />
     <ClCompile Include="Game\GameStates\LeaderBoardMenu\LeaderBoardMenuState.cpp" />
+    <ClCompile Include="Game\GameStates\MainGameplay\GameObjects\Ball.cpp" />
+    <ClCompile Include="Game\GameStates\MainGameplay\GameObjects\Block.cpp" />
+    <ClCompile Include="Game\GameStates\MainGameplay\GameObjects\BlockFactory.cpp" />
+    <ClCompile Include="Game\GameStates\MainGameplay\GameObjects\Platform.cpp" />
     <ClCompile Include="Game\GameStates\MainGameplay\LevelLoader.cpp" />
     <ClCompile Include="Game\GameStates\MainGameplay\MainGameplayState.cpp" />
     <ClCompile Include="Game\GameStates\MainMenu\MainMenuState.cpp" />
@@ -56,6 +65,7 @@
     <ClCompile Include="Game\Main.cpp" />
     <ClCompile Include="Game\Math\Math.cpp" />
     <ClCompile Include="Game\Settings\Settings.cpp" />
+    <ClCompile Include="Game\UI\UI.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
